--- a/views/rooms/easy/congratulations.template.html
+++ b/views/rooms/easy/congratulations.template.html
@@ -23,6 +23,7 @@
             <div class="col-3"><img src="./lib/img/ico_err.png" style="height: 25px;padding-top: 4px">Total de erros: - {{resume.score.totalErrors}} pts</div>
             <div class="col-3"><img src="./lib/img/clock.png" style="height: 25px;padding-top: 4px">Bônus tempo: {{resume.score.bonus}}</div>
             <div class="col-3"><img src="./lib/img/ico_mini_skip.png" style="height: 25px;padding-top: 4px">Questões Puladas: {{resume.skips}}</div>       
+            <div class="col-3"><img src="./lib/img/consecutivo.png" style="height: 25px;padding-top: 4px">Bônus acerto consecutivo: {{resume.score.bonusConsecutive}}</div>
         </div>
          <div class="row" style="padding-top: 10px">
                 <div class="col-12">
