--- a/views/rooms/medium/room.template.html
+++ b/views/rooms/medium/room.template.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="col-7" ng-if="tip">
                         
-                        <div class="alert alert-success" role="alert">
+                        <div class="alert alert-success" role="alert" style="text-align: center">
                            {{tip}}
                            
                         </div>
