--- a/views/rooms/easy/room.template.html
+++ b/views/rooms/easy/room.template.html
@@ -1,9 +1,10 @@
 <div ng-controller="EasyRoomCtrl" class="row" style="padding: 30px 30px 30px 30px">
+    <!--
     <div class="col-2">
         <div data-ng-include="'./views/profile.template.html'"></div>
-    </div>
+    </div>-->
 
-    <div class="col-7">
+    <div class="col-9">
         <div class="row">
             <div class="col-12">
                 <div class="card text-white bg-info mb-3" style="width: 100%">
@@ -210,3 +211,5 @@
 
 
     </div>
+    </div>
+    
