--- a/views/rooms/easy/room.template.html
+++ b/views/rooms/easy/room.template.html
@@ -1,4 +1,4 @@
-<div ng-controller="EasyRoomCtrl" class="row" style="padding: 30px 30px 30px 30px">
+<div ng-controller="EasyRoomCtrl" class="row" style="min-height: 120%; padding: 30px 30px 30px 30px">
     <!--
     <div class="col-2">
         <div data-ng-include="'./views/profile.template.html'"></div>
