--- a/views/rooms/medium/room.template.html
+++ b/views/rooms/medium/room.template.html
@@ -70,7 +70,7 @@
         
         
                 
-                <div class="row">
+                <div class="row" style="min-height: 1200px">
                     <div class="col-3">
                         <div class="card bg-light mb-3" ng-click="markAlternative(0)" style="max-width: 18rem;cursor: pointer  ">
                             <div class="card-header">
